examples/test/testpolicy15426.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15426
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key21: value36
      key4: value20
      key44: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value36
          key40: value6
          key36: value7
      podSelector:
        matchLabels:
          key29: value7
